--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 {
   "git": {
     "submodules": false
-  }
+  },
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist/ai-tool-dashboard"
 }
